        inappropriate (this is currently necessary on Windows).

  \item From R-3.1.2: New function \code{icuGetCollate()} to report on the ICU
        collation locale in use (if any).

  \item From R-3.1.3: \code{icuSetCollate()} now accepts \code{locale = "ASCII"}
        which uses the basic C function \code{strcmp} and so collates
        strings byte-by-byte in numerical order.

  \item The \code{lengths} function has been ported from R Core releases
        which had NEWS items as below:

        R-3.2.0: New \code{lengths()} function for getting the lengths
        of all elements in a list.

        R-3.2.1: \code{lengths(x)} now also works (trivially) for
        atomic \code{x} and hence can be used more generally as an
        efficient replacement of \code{sapply(x, length)} and similar.

        R-3.3.0: \code{lengths()} considers methods for \code{length}
        and \code{[[} on \code{x}, so it should work automatically on
        any objects for which appropriate methods on those generics
        are defined.
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item The documentation on \code{debug} and \code{debugonce} has been
        fixed to remove mention of the \code{text} and \code{condition} 
        arguments. These arguments were documented in R-2.10.0, and in 
        subsequent R Core versions to at least R-3.4.1, but they have never 
        been implemented as documented, but rather have always been 
        completely ignored.
  \item Fixed two pqR bugs illustrated by the following:
\preformatted{    a <- c(2,3); e <- new.env(); e[["x"]] <- a; a[2] <- 9; e$x[2]
    L <- list(1,2); y <- list(2+1); L[2] <- y; y[[1]][1] <- 9; L[[2]]
}
        For both lines above, the value printed was 9 rather than 3.
  \item Previously, \code{length(plist)<-n} did not work when \code{plist}
        was a pairlist, but it does now.  This bug also exists in R Core
        versions to at least R-3.4.1.
  \item Fixed a bug illustrated by the following: