@@ -1,0 +1,3 @@
+Various features from R Core releases.
+
+Added trimws from R-3.2.0.
